@@ -62,6 +62,7 @@ o added libc replacements qgetservent, qgetservbyname, qgetservbyport along
 38. added get_scram_secrets() function
 - 05/08/2022
 39. added sodium_random() function
+40. mkpasswd.c: encrypt when encrypt_flag is non-zero
 
 * Sat Jul 17 2021 18:14:37 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1-1.1%{?dist}
 Release 1.1 Start 14/02/2021
